# flint_build

./: .gitignore  Cargo.toml  README.md
cli/: .gitignore  README.md  pubspec.yaml
cli/example/: benchmark.dart  benchmark_results.txt  flint.yaml  pubspec.yaml  user_model.build_runner.dart  user_model.flint.dart
cli/example/lib/: user_model.dart  user_model.g.dart
cli/example/templates/: json_serializable.tera
cli/example/tool/: benchmark.dart
engine/: Cargo.toml  README.md  flint.yaml
engine/src/: builder.rs  config.rs  error.rs  lib.rs  main.rs  registry.rs
engine/src/config/: flint.rs  mod.rs  pubspec.rs
engine/src/discovery/: find_dart_files.rs
engine/src/generators/: generic.rs  mod.rs
engine/src/generators/flint_json/: emitter.rs
engine/src/generators/json_serializable/: emitter.rs
engine/src/parser/: dart_file.rs  dart_types.rs
engine/src/templates/: flint_json.tera  json_serializable.tera
engine/src/watcher/: mod.rs
engine/tests/: flint_json_test.rs  generic_generator_test.rs  gold_standard_test.rs  json_serializable_test.rs  parse_test.rs
engine/tests/fixtures/gold/: generic_model.dart  user_model.dart
engine/tests/snapshots/: flint_json_test__generic_model.snap  flint_json_test__user_model.snap  gold_standard_test__gold_standard_user_model.snap  json_serializable_test__user_model.snap
src/: main.rs
src/config/: mod.rs  pubspec.rs
src/discovery/: find_dart_files.rs  mod.rs
src/generators/: mod.rs
src/generators/json_serializable/: emitter.rs
src/parser/: dart_file.rs  dart_types.rs  mod.rs
src/watcher/: mod.rs
