[package]
name = "flint"
version = "0.1.0"
edition = "2024"
description = "A fast, native build_runner replacement for Dart/Flutter projects"
license = "MIT"

[dependencies]
rayon = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
notify = "8"
notify-debouncer-mini = "0"
anyhow = "1"
colored = "3"
tree-sitter = "0"
tree-sitter-dart = "0"