[package]
name = "flint_build"
version = "0.1.0"
edition = "2024"
description = "A fast, native build_runner replacement for Dart/Flutter projects"
license = "MIT"

[dependencies]
rayon = "1.12"
walkdir = "2.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
notify = "8.2"
notify-debouncer-mini = "0.7"
anyhow = "1.0"
colored = "3.1"
tree-sitter = "0.26"
tree-sitter-dart = "0.1"
log = "0.4"
env_logger = "0.11"
tera = "1.20.1"
serde_json = "1.0.149"
heck = "0.5.0"

[dev-dependencies]
insta = "1.47"
